result section done

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
   </head>
   <body>
     <main>
-      <div className="result-summary">
-        <div className="results grid-flow" data-spacing="large">
-          <h1 className="section-title">Your Result</h1>
+      <div class="result-summary">
+        <div class="results grid-flow" data-spacing="large">
+          <h1 class="section-title">Your Result</h1>
 
-          <p className="result-score">
+          <p class="result-score">
             <span>76</span>
             of 100
           </p>
 
-          <div className="grid-flow">
-            <h2 className="result-rank">Great</h2>
+          <div class="grid-flow">
+            <h2 class="result-rank">Great</h2>
             <p>
               You scored higher than 65% of the people who have taken these
               tests.
@@ -37,16 +37,16 @@
         </div>
 
         <div
-          className="summary grid-flow"
+          class="summary grid-flow"
           data-spacing="large"
           data-item-type="accent-1"
         >
-          <h2 className="section-title">Summary</h2>
+          <h2 class="section-title">Summary</h2>
 
-          <div className="summary-item" data-spacing="small">
-            <div className="flex-group">
+          <div class="summary-item" data-spacing="small">
+            <div class="flex-group">
               <svg
-                className="summary-icon"
+                class="summary-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
                 height="20"
@@ -60,7 +60,7 @@
                   d="M10.833 8.333V2.5l-6.666 9.167h5V17.5l6.666-9.167h-5Z"
                 />
               </svg>
-              <h3 className="summary-item-title">Reaction</h3>
+              <h3 class="summary-item-title">Reaction</h3>
             </div>
 
             <p>
@@ -69,10 +69,10 @@
             </p>
           </div>
 
-          <div className="summary-item" data-item-type="accent-2">
-            <div className="flex-group">
+          <div class="summary-item" data-item-type="accent-2">
+            <div class="flex-group">
               <svg
-                className="summary-icon"
+                class="summary-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
                 height="20"
@@ -98,15 +98,15 @@
                   d="M16.447 13.004a3.334 3.334 0 0 0 .728-5.53m-.025-.067a2.083 2.083 0 0 0-2.983-2.824M10 3.75a2.085 2.085 0 0 1 2.538-2.033 2.084 2.084 0 0 1 1.43 2.92m-.635 12.03a1.667 1.667 0 0 1-3.333 0"
                 />
               </svg>
-              <h3 className="summary-item-title">Memory</h3>
+              <h3 class="summary-item-title">Memory</h3>
             </div>
-            <p className="summary-score"><span>92</span> / 100</p>
+            <p class="summary-score"><span>92</span> / 100</p>
           </div>
 
-          <div className="summary-item" data-item-type="accent-3">
-            <div className="flex-group">
+          <div class="summary-item" data-item-type="accent-3">
+            <div class="flex-group">
               <svg
-                className="summary-icon"
+                class="summary-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
                 height="20"
@@ -120,15 +120,15 @@
                   d="M7.5 10h5M10 18.333A8.333 8.333 0 1 0 1.667 10c0 1.518.406 2.942 1.115 4.167l-.699 3.75 3.75-.699A8.295 8.295 0 0 0 10 18.333Z"
                 />
               </svg>
-              <h3 className="summary-item-title">Verbal</h3>
+              <h3 class="summary-item-title">Verbal</h3>
             </div>
-            <p className="summary-score"><span>61</span> / 100</p>
+            <p class="summary-score"><span>61</span> / 100</p>
           </div>
 
-          <div className="summary-item" data-item-type="accent-4">
-            <div className="flex-group">
+          <div class="summary-item" data-item-type="accent-4">
+            <div class="flex-group">
               <svg
-                className="summary-icon"
+                class="summary-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
                 height="20"
@@ -148,12 +148,12 @@
                   d="M17.5 10c-1.574 2.492-4.402 5-7.5 5s-5.926-2.508-7.5-5C4.416 7.632 6.66 5 10 5s5.584 2.632 7.5 5Z"
                 />
               </svg>
-              <h3 className="summary-item-title">Visual</h3>
+              <h3 class="summary-item-title">Visual</h3>
             </div>
-            <p className="summary-score"><span>72</span> / 100</p>
+            <p class="summary-score"><span>72</span> / 100</p>
           </div>
+          <button class="button">Continue</button>
         </div>
-        <button className="button">Continue</button>
       </div>
     </main>
 
