--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         >
           <h2 class="section-title">Summary</h2>
 
-          <div class="summary-item" data-spacing="small">
+          <div class="summary-item" data-spacing="small" data-item-type="accent-1">
             <div class="flex-group">
               <svg
                 class="summary-icon"
@@ -63,7 +63,7 @@
               <h3 class="summary-item-title">Reaction</h3>
             </div>
 
-            <p>
+            <p class="summary-score">
               <span>80</span>
               / 100
             </p>
@@ -152,6 +152,7 @@
             </div>
             <p class="summary-score"><span>72</span> / 100</p>
           </div>
+
           <button class="button">Continue</button>
         </div>
       </div>
